# rust-i32-as-f32-issue-repro

./: Cargo.toml  output.txt
.cargo/: config.toml
src/: main.rs
